# fdo

./: .envrc  .gitignore  README.md  csr.der  justfile
client/: Cargo.toml  cert.der  cert1.der  foo.sh
client/src/: client.rs  main.rs
client/src/crypto/: kdf.rs  mod.rs  software.rs  tpm.rs
client/src/protocol/: di.rs  mod.rs  to1.rs  to2.rs
client/src/protocol/v101/: device_credentials.rs  eat_signature.rs  error.rs  guid.rs  hash_hmac.rs  key_exchange.rs  mod.rs  ownership_voucher.rs  public_key.rs  randezvous_info.rs  rv_to2_addr.rs  service_info.rs  sign_info.rs  x509.rs
client/src/protocol/v101/di/: app_start.rs  custom.rs  done.rs  mod.rs  set_credentials.rs  set_hmac.rs
client/src/protocol/v101/to1/: hello_rv.rs  hello_rv_ack.rs  mod.rs  prove_to_rv.rs  rv_redirect.rs
client/src/protocol/v101/to2/: device_service_info.rs  device_service_info_ready.rs  done.rs  get_ov_next_entry.rs  hello_device.rs  mod.rs  ov_next_entry.rs  owner_service_info.rs  owner_service_info_ready.rs  prove_device.rs  prove_ov_hdr.rs  setup_device.rs
client/src/storage/: mod.rs
containers/tpm2-tss-build/: Containerfile
scripts/: basic-onboarding.sh  build-tpm2-tss.sh  build.sh  clone.sh  go-fdo-client.sh  run-on-vm.sh  run.sh  send-to0.sh  serve.sh  setup.sh  vish-destroy.sh  vish-launch.sh
