[package]
name = "client"
version = "0.1.0"
edition = "2024"

[features]
default = ["tpm"]
tpm = ["dep:tss-esapi"]

[dependencies]
aws-lc-rs = "1.14.1"
base64 = "0.22.1"
bitflags = "2.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
coset = { version = "0.4.0", features = ["std"] }
eyre = "0.6.12"
nix = { version = "0.30.1", features = ["ioctl"] }
rcgen = { version = "0.14.5", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "system-proxy", "rustls-tls-manual-roots-no-provider"] }
rustls = { version = "0.23.34", default-features = false, features = ["aws-lc-rs", "logging", "prefer-post-quantum", "read_buf", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tss-esapi = { version = "7.6.0", optional = true }
url = "2.5.7"
uuid = "1.18.1"
zeroize = "1.8.2"

[dev-dependencies]
serde_json = { version = "1.0.145", features = ["preserve_order"] }
